[metadata]
name = micmec
version = 1.0
description = The first implementation of the micromechanical model, ever.
long_description = file: README.srt
keywords = coarse graining, molecular dynamics, metal-organic frameworks
license = GNU General Public License v3 or later (GPLv3+)
classifiers = 
    Environment :: Console
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
include = micmec*
exclude = 
    docs*
    simulations*
    data*

[options.entry_points]
console_scripts =
    micmec_builder = micmec.builder.builder:main
